# gemini-interactions-mcp

./: .gitignore  README.md  pyproject.toml  server.py  skill.md
cli/: Cargo.toml
cli/src/: main.rs
server/: pyproject.toml  server.py
