[project]
name = "gemini-interactions-server"
version = "0.1.0"
description = "FastMCP server for Gemini Interactions API with grounding"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
